tests/__snapshots__/validation-target-not-valid-range-within-union-stderr.snap.txt
Error: The specified range '5.5 >5.7' is not valid.

A range must be specified using an operator and a minor version: '>=5.8'.
To set an upper bound, use the intersection of two ranges: '>=5.4 <5.6'.
Use the '||' operator to join ranges into a union: '>=5.4 <5.6 || 5.6.2 || >=5.8'.

  1 | {
  2 |   "target": ">=5.4 || 5.5 >5.7",
    |             ~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.tst.*"
  5 |   ]

      at ./tstyche.json:2:13

